# perfredux

./: CMakeLists.txt  README.md
scripts/: run  runstd
test1/: CMakeLists.txt  main.cpp
test2/: CMakeLists.txt  main.cpp
test3/: CMakeLists.txt  main.cpp
